--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -21,6 +21,20 @@
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
 
+            <Image Grid.Row="1" Stretch="None">
+                <Image.Source>
+                    <DrawingImage>
+                        <DrawingImage.Drawing>
+                            <DrawingGroup>
+                                <!--  ImageDrawing は複数入力可能  -->
+                                <!-- <ImageDrawing ImageSource="sampleImages\kiwi.png" Rect="75,75,100,100" /> -->
+
+                            </DrawingGroup>
+                        </DrawingImage.Drawing>
+                    </DrawingImage>
+                </Image.Source>
+            </Image>
+
             <StackPanel Grid.Row="2">
                 <Border>
                     <StackPanel Orientation="Horizontal">
