add / 画像入りのフォルダをドラッグアンドドロップでロードする機能を実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -2,11 +2,19 @@
     x:Class="ImageChecker.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:model="clr-namespace:ImageChecker.Models"
     xmlns:prism="http://prismlibrary.com/"
     Title="{Binding Title}"
     Width="800"
     Height="600"
-    prism:ViewModelLocator.AutoWireViewModel="True">
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    AllowDrop="True">
+
+    <i:Interaction.Behaviors>
+        <model:DragAndDropuBehavior />
+    </i:Interaction.Behaviors>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="600" />
