--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -45,15 +45,15 @@
 
             <StackPanel Grid.Row="2">
                 <Border>
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Margin="5,0" Orientation="Horizontal">
                         <StackPanel.Resources>
                             <Style TargetType="TextBlock">
                                 <Setter Property="FontSize" Value="14" />
-                                <Setter Property="Margin" Value="20,0,5,0" />
                             </Style>
 
                             <Style TargetType="ComboBox">
-                                <Setter Property="Width" Value="100" />
+                                <Setter Property="Width" Value="120" />
+                                <Setter Property="Margin" Value="5,0,18,0" />
                             </Style>
                         </StackPanel.Resources>
 
