add / 画面左側のリストボックスの動作の調整
リストボックス内の画像がウィンドウサイズに合わせて拡大、縮小するように変更

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -22,7 +22,8 @@
                 <Setter.Value>
                     <DataTemplate>
                         <Border
-                            Width="115"
+                            Width="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=ActualWidth}"
+                            MinWidth="110"
                             Padding="0,2"
                             BorderBrush="DarkGray"
                             BorderThickness="0,0,0,2">
