add / 画像の表示部分を調整

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -76,8 +76,10 @@
 
             <Grid.Resources>
                 <Style TargetType="Image">
-                    <Setter Property="Stretch" Value="Fill" />
                     <Setter Property="Grid.Row" Value="0" />
+                    <Setter Property="HorizontalAlignment" Value="Left" />
+                    <Setter Property="VerticalAlignment" Value="Top" />
+
                 </Style>
             </Grid.Resources>
 
