add / 画像の表示位置をコントロールできるよう実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -92,10 +92,37 @@
                     </Style>
                 </Canvas.Resources>
 
-                <Image Source="{Binding ImageLoader.CurrentImageFileA.FileInfo.FullName}" Visibility="{Binding DrawingA, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                <Image Source="{Binding ImageLoader.CurrentImageFileB.FileInfo.FullName}" Visibility="{Binding DrawingB, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                <Image Source="{Binding ImageLoader.CurrentImageFileC.FileInfo.FullName}" Visibility="{Binding DrawingC, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                <Image Source="{Binding ImageLoader.CurrentImageFileD.FileInfo.FullName}" Visibility="{Binding DrawingD, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                <Image Source="{Binding ImageLoader.CurrentImageFileA.FileInfo.FullName}" Visibility="{Binding DrawingA, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <TranslateTransform X="{Binding ImageLoader.CurrentImageFileA.X}" Y="{Binding ImageLoader.CurrentImageFileA.Y}" />
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
+
+                <Image Source="{Binding ImageLoader.CurrentImageFileB.FileInfo.FullName}" Visibility="{Binding DrawingB, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <TranslateTransform X="{Binding ImageLoader.CurrentImageFileB.X}" Y="{Binding ImageLoader.CurrentImageFileB.Y}" />
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
+
+                <Image Source="{Binding ImageLoader.CurrentImageFileC.FileInfo.FullName}" Visibility="{Binding DrawingC, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <TranslateTransform X="{Binding ImageLoader.CurrentImageFileC.X}" Y="{Binding ImageLoader.CurrentImageFileC.Y}" />
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
+
+                <Image Source="{Binding ImageLoader.CurrentImageFileD.FileInfo.FullName}" Visibility="{Binding DrawingD, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <TranslateTransform X="{Binding ImageLoader.CurrentImageFileD.X}" Y="{Binding ImageLoader.CurrentImageFileD.Y}" />
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
 
             </Canvas>
 
