add / MainWindow から Image タグの生成機能を使えるよう xaml にコードを追記

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -15,6 +15,14 @@
         <model:DragAndDropuBehavior />
     </i:Interaction.Behaviors>
 
+    <Window.InputBindings>
+        <KeyBinding
+            Key="I"
+            Command="{Binding GenerateImageTagCommand}"
+            Modifiers="Control" />
+
+    </Window.InputBindings>
+
     <Window.Resources>
 
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
