add / Draw タグの生成機能を実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -21,6 +21,11 @@
             Command="{Binding GenerateImageTagCommand}"
             Modifiers="Control" />
 
+        <KeyBinding
+            Key="D"
+            Command="{Binding GenerateDrawTagCommand}"
+            Modifiers="Control" />
+
     </Window.InputBindings>
 
     <Window.Resources>
