add / ビューのテキストブロックの文字色を変更

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -60,6 +60,7 @@
                                 <TextBlock
                                     Grid.Row="1"
                                     HorizontalAlignment="Center"
+                                    Foreground="WhiteSmoke"
                                     Text="{Binding FileInfo.Name}" />
 
                             </Grid>
@@ -91,7 +92,7 @@
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <TextBlock Text="画面比率 : " />
+                <TextBlock Foreground="WhiteSmoke" Text="画面比率 : " />
                 <ComboBox
                     Width="100"
                     ItemsSource="{Binding AspectRatioStrings}"
@@ -187,28 +188,28 @@
                         </StackPanel.Resources>
 
                         <CheckBox IsChecked="{Binding DrawingA}" />
-                        <TextBlock Text="A" />
+                        <TextBlock Foreground="WhiteSmoke" Text="A" />
                         <ComboBox
                             IsEnabled="{Binding DrawingA}"
                             ItemsSource="{Binding ImageLoader.ImageFilesA}"
                             SelectedItem="{Binding ImageLoader.CurrentImageFileA}" />
 
                         <CheckBox IsChecked="{Binding DrawingB}" />
-                        <TextBlock Text="B" />
+                        <TextBlock Foreground="WhiteSmoke" Text="B" />
                         <ComboBox
                             IsEnabled="{Binding DrawingB}"
                             ItemsSource="{Binding ImageLoader.ImageFilesB}"
                             SelectedItem="{Binding ImageLoader.CurrentImageFileB}" />
 
                         <CheckBox IsChecked="{Binding DrawingC}" />
-                        <TextBlock Text="C" />
+                        <TextBlock Foreground="WhiteSmoke" Text="C" />
                         <ComboBox
                             IsEnabled="{Binding DrawingC}"
                             ItemsSource="{Binding ImageLoader.ImageFilesC}"
                             SelectedItem="{Binding ImageLoader.CurrentImageFileC}" />
 
                         <CheckBox IsChecked="{Binding DrawingD}" />
-                        <TextBlock Text="D" />
+                        <TextBlock Foreground="WhiteSmoke" Text="D" />
                         <ComboBox
                             IsEnabled="{Binding DrawingD}"
                             ItemsSource="{Binding ImageLoader.ImageFilesD}"
